VoicesCard. Adding the variable height, fixing the tablet gap on the lists.

--- a/sass/conditionals/voices-listing.sass
+++ b/sass/conditionals/voices-listing.sass
@@ -9,11 +9,6 @@
 
 // File for the Voices NON-CUSTOMIZABLE LISTS
 //Hover gradients
-.views-row:hover,
-.views-row:active
-  .field-name-field-image-single-public
-    img
-      //opacity: 0
 
 .views-row:hover
   &:before
@@ -152,9 +147,8 @@
           cursor: pointer
           display: table
           left: 0
-          //padding: 44% 25px
           position: absolute
-          bottom: 0
+          top: 0
           width: 100%
           opacity: 0
           text-align: left
@@ -162,28 +156,6 @@
           -moz-transition: opacity 500ms
           -o-transition: opacity 500ms
           transition: opacity 500ms
-
-        //&.blue
-        //  background: linear-gradient( to bottom, rgba(38,99,157,0.5), rgb(38,99,157) 50% )
-        //  //width: 100.3%
-        //&.brightteal
-        //  background: linear-gradient( to bottom, rgba(0,97,82,0.5), rgb(0,97,82) 50% )
-        //  //width: 100.3%
-        //&.charcoal
-        //  background: linear-gradient( to bottom, rgba(51,51,51,0.5), rgb(51,52,51) 50% )
-        //  //width: 100.3%
-        //&.pink
-        //  background: linear-gradient( to bottom, rgba(221,24,128,0.5), rgb(221,24,128) 50% )
-        //  //width: 100.3%
-        //&.purple
-        //  background: linear-gradient( to bottom, rgba(151,24,93,0.5), rgb(151,24,93) 50% )
-        //  //width: 100.3%
-        //&.white
-        //  background: linear-gradient(transparent, $white 50%)
-        //  //width: 100.3%
-        //&.green
-        //  background: linear-gradient( to bottom, rgba(0,97,82,0.5), rgb(0,97,82) 50% )
-        //  //width: 100.3%
 
 .pane-voices-filters-voices-list-cta-panel-pane,
 .view-gsb-voices-listing.view-id-gsb_voices_listing,
@@ -254,34 +226,36 @@
       margin-bottom: 50px
   .views-row
     border: 1px solid $listing-divider
-    //height: 500px
     margin: 50px 45px 0px 0px
+    padding-bottom: 45px
     width: 30% //360px
     +breakpoint($bp-for-phone-tablet-range)
       height: auto
       margin: 0 20px
     +breakpoint($bp-for-phone-only)
-      width: 86%
-      //height: 446px
       margin: 0px 0px 35px 5px
+      padding-bottom: 35px
+      width: 86%
     +breakpoint($bp-for-tablet-range)
-      //height: 410px
       margin: 0px 30px 35px 0px
     +breakpoint($bp-tablet-pot)
       width: 43%
     +breakpoint($bp-tablet-land)
       width: 30%
-      //height: 435px
     +breakpoint($bp-iphone-range-land)
+      padding-bottom: 35px
       width: 42.4%
     +breakpoint($bp-iphone6p-land)
+      padding-bottom: 35px
       width: 42%
     +breakpoint($bp-iphone6p-port)
+      padding-bottom: 35px
       width: 80%
     +breakpoint($bp-tablet-pot)
-      //height: 435px
+      padding-bottom: 35px
       margin: 0px 46px 50px 0px
     +breakpoint($bp-nexus-land)
+      padding-bottom: 35px
       width: 44%
     +breakpoint($bp-tablet-pro-port)
       //height: 435px
